# docs/v2/admin/admin_swagger.yaml
@@ -313,6 +313,29 @@ paths:
       tags:
       - Employee
   /api/admin/v1/login:
+    delete:
+      consumes:
+      - application/json
+      description: Logout
+      operationId: logout
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: ""
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/admin.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/admin.errorResponse'
+      security:
+      - Bearer: []
+      summary: Logout
+      tags:
+      - Authentication
     post:
       consumes:
       - application/json
@@ -369,6 +392,37 @@ paths:
       summary: Get profile
       tags:
       - Me
+  /api/admin/v1/token:
+    post:
+      consumes:
+      - application/json
+      description: Renew token
+      operationId: renewtoken
+      parameters:
+      - description: Renew token
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/admin.renewTokenRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/admin.tokenPairResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/admin.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/admin.errorResponse'
+      summary: Renew token
+      tags:
+      - Authentication
   /api/admin/v1/transactions:
     get:
       consumes:
@@ -412,62 +466,7 @@ paths:
       summary: Show transactions
       tags:
       - Transaction
-  /login:
-    delete:
-      consumes:
-      - application/json
-      description: Logout
-      operationId: logout
-      produces:
-      - application/json
-      responses:
-        "204":
-          description: ""
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/admin.errorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/admin.errorResponse'
-      security:
-      - Bearer: []
-      summary: Logout
-      tags:
-      - Authentication
-  /token:
-    post:
-      consumes:
-      - application/json
-      description: Renew token
-      operationId: renewtoken
-      parameters:
-      - description: Renew token
-        in: body
-        name: payload
-        required: true
-        schema:
-          $ref: '#/definitions/admin.renewTokenRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/admin.tokenPairResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/admin.errorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/admin.errorResponse'
-      summary: Renew token
-      tags:
-      - Authentication
-  /transactions/{id}:
+  /api/admin/v1/transactions/{id}:
     get:
       consumes:
       - application/json
